Fixing Autoboxing issues